--- a/app.json
+++ b/app.json
@@ -29,6 +29,9 @@
       "favicon": "./assets/favicon.png",
       "bundler": "metro"
     },
-    "scheme": "ask-ai"
+    "scheme": "ask-ai",
+    "packagerOpts": {
+      "config": "metro.config.ts"
+    }
   }
 }
